--- a/blog.html
+++ b/blog.html
@@ -8,26 +8,28 @@
 </head>
 <body>
     <header>
-
-        <!-- desktop navigation bar -->
-        <nav class="dt-nav">
-            <ul>
-                <li><a href="#0">HOME</a></li>
-                <li><a href="#0">ABOUT</a></li>
-                <li><a href="#0">BLOG</a></li>
-                <li><a href="#0">CONTACT</a></li>
-            </ul>
-        </nav>
-        <!-- mobile navigation bar -->
-        <nav class="mb-nav">
-            <ul>
-                <li><a href="#0">HOME</a></li>
-                <li><a href="#0">ABOUT</a></li>
-                <li><a href="#0">BLOG</a></li>
-                <li><a href="#0">CONTACT</a></li>
-            </ul>
-        </nav>
-        <h1>Blog</h1>
+        <div class="blog-background">
+            <div class="logo">Shoe Kloset</div>
+            <!-- desktop navigation bar -->
+            <nav class="dt-nav">
+                <ul>
+                    <li><a href="#0">HOME</a></li>
+                    <li><a href="#0">ABOUT</a></li>
+                    <li><a href="#0">BLOG</a></li>
+                    <li><a href="#0">CONTACT</a></li>
+                </ul>
+            </nav>
+            <!-- mobile navigation bar -->
+            <nav class="mb-nav">
+                <ul>
+                    <li><a href="#0">HOME</a></li>
+                    <li><a href="#0">ABOUT</a></li>
+                    <li><a href="#0">BLOG</a></li>
+                    <li><a href="#0">CONTACT</a></li>
+                </ul>
+            </nav>
+            <h1>Blog</h1>
+        </div>
     </header>
 
     <aside>
