--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <div class="contact-background">
+            <div class="logo">Shoe Kloset</div>
             <!-- desktop navigation bar -->
             <nav class="dt-nav">
                 <ul>
