navbar for pc completed, home css in progress, and more mixins!

--- a/blog.html
+++ b/blog.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles\style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Pompiere&display=swap"
+        rel="stylesheet">
     <title>Blog | Shoe Kloset</title>
 </head>
 <body>
@@ -28,7 +30,7 @@
                     <li><a href="#0">CONTACT</a></li>
                 </ul>
             </nav>
-            <h1>Blog</h1>
+            <h2>Blog</h2>
         </div>
     </header>
 
@@ -49,7 +51,7 @@
 
     <article>
         <img src="" alt="">
-        <h2>Shoes around the world</h2>
+        <h5>Shoes around the world</h5>
         <p>Monday May 4th, 2019 by Dieula</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, praesentium neque exercitationem voluptate numquam pariatur quisquam facilis natus? Corporis quibusdam, distinctio sunt itaque cumque id qui nihil facere pariatur officiis quos saepe eveniet quasi, atque optio vero minus est expedita odit, aliquid eius. Doloribus dicta earum odio debitis, eos quidem voluptatem quibusdam illum atque sint omnis, placeat, nemo quia optio. Earum, labore. Iure, unde hic ratione eum magni beatae saepe aperiam. Eaque expedita quasi explicabo libero harum assumenda accusamus mollitia repudiandae, ipsa labore ut quibusdam aspernatur maiores iusto ex commodi perferendis obcaecati animi
         <br>
