--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles\style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Pompiere&display=swap"
+        rel="stylesheet">
     <title>Contact | Shoe Kloset</title>
 </head>
 <body>
@@ -28,7 +30,7 @@
                     <li><a href="#0">CONTACT</a></li>
                 </ul>
             </nav>
-            <h1>Get in touch</h1>
+            <h2>Get in touch</h2>
         </div>
     </header>
 
