just more css and stuff

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles\style.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Pompiere&display=swap"
-        rel="stylesheet">
+    rel="stylesheet">
+    <script src="https://kit.fontawesome.com/cc19e2243a.js" crossorigin="anonymous"></script>
     <title>Home | Shoe Kloset</title>
 </head>
 <body>
@@ -74,27 +75,20 @@
     
     <div class="communication">
         <div class="comm-container">
-            <i class="fab fa-instagram"></i>
-            <h3>Locations</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel explicabo, repudiandae itaque dolorem neque numquam alias ut quos tempore atque.</p>
+            <h3><i class="fas fa-location-arrow"></i>Locations</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error repudiandae architecto sint labore totam omnis quas, consequatur fuga illo praesentium atque voluptates vel numquam nostrum perferendis magni nulla. Cumque, vel.</p>
         </div>
         <div class="comm-container">
-            <i class="fab fa-instagram"></i>
-            <h3>Community</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel explicabo, repudiandae itaque dolorem neque numquam
-                alias ut quos tempore atque.</p>
+            <h3><i class="fas fa-users"></i>Community</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error repudiandae architecto sint labore totam omnis quas, consequatur fuga illo praesentium atque voluptates vel numquam nostrum perferendis magni nulla. Cumque, vel.</p>
         </div>
         <div class="comm-container">
-            <i class="fab fa-instagram"></i>
-            <h3>Blog</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel explicabo, repudiandae itaque dolorem neque numquam
-                alias ut quos tempore atque.</p>
+            <h3><i class="fab fa-instagram"></i>Blog</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error repudiandae architecto sint labore totam omnis quas, consequatur fuga illo praesentium atque voluptates vel numquam nostrum perferendis magni nulla. Cumque, vel.</p>
         </div>
         <div class="comm-container">
-            <i class="fab fa-instagram"></i>
-            <h3>Get in touch</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel explicabo, repudiandae itaque dolorem neque numquam
-                alias ut quos tempore atque.</p>
+            <h3><i class="fas fa-phone"></i>Get in touch</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error repudiandae architecto sint labore totam omnis quas, consequatur fuga illo praesentium atque voluptates vel numquam nostrum perferendis magni nulla. Cumque, vel.</p>
         </div>
     </div>
 
