home desktop ver. is finished

--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="blog-background">
-            <div class="logo">Shoe Kloset</div>
+
             <!-- desktop navigation bar -->
             <nav class="dt-nav">
                 <ul>
@@ -30,7 +30,11 @@
                     <li><a href="#0">CONTACT</a></li>
                 </ul>
             </nav>
-            <h2>Blog</h2>
+            <div href="#index.html" class="logo">Shoe<br>Kloset</div>
+            <h1>Blog</h1>
+            <div class="home-box-header">
+                <img src="shoe-kloset/home-box-header.png" alt="4 different types of shoes on display.">
+            </div>
         </div>
     </header>
 
