media query complete, only navbar left

--- a/index.html
+++ b/index.html
@@ -25,14 +25,17 @@
                 </ul>
             </nav>
             <!-- mobile navigation bar -->
-            <nav class="mb-nav">
-                <ul>
-                    <li><a href="#0">HOME</a></li>
-                    <li><a href="#0">ABOUT</a></li>
-                    <li><a href="#0">BLOG</a></li>
-                    <li><a href="#0">CONTACT</a></li>
-                </ul>
-            </nav>
+            <div class="sticky-bar">
+                <nav class="mb-nav">
+                    <ul>
+                        <li><a href="#0">HOME</a></li>
+                        <li><a href="#0">ABOUT</a></li>
+                        <li><a href="#0">BLOG</a></li>
+                        <li><a href="#0">CONTACT</a></li>
+                    </ul>
+                </nav>
+            </div>
+
             <div href="#index.html" class="logo">Shoe<br>Kloset</div>
             <h1>Find something new</h1>
             <div class="home-box-header">
@@ -63,21 +66,21 @@
     <div class="rm-wrapper">
         <div class="rm-container1">
             <img src="shoe-kloset/left-image.jpg" alt="White boots in the snow.">
-            <h3>Too many options</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus nesciunt earum hic expedita dolor
-                eveniet,
-                cumque accusantium autem ipsum maiores doloremque, inventore beatae provident nobis.</p>
-            <a href="#index.html">Read more</a>
+            <div class="texts">
+                <h3>New Additions</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus nesciunt earum hic expedita dolor eveniet, cumque accusantium autem ipsum maiores doloremque, inventore beatae provident nobis.</p>
+                <a href="#index.html">Read more</a>
+            </div>
+
         </div>
         <div class="rm-container2">
-            <h3>New Additions</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus nesciunt earum hic expedita dolor
-                eveniet,
-                cumque accusantium autem ipsum maiores doloremque, inventore beatae provident nobis! Voluptate rem
-                reprehenderit
-                aperiam maiores.</p>
-            <a href="#index.html">Read more</a>
             <img src="shoe-kloset/right-image.jpg" alt="Many different types of high heels on the floor.">
+            <div class="texts">
+                <h3>Too many options</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus nesciunt earum hic expedita dolor eveniet, cumque accusantium autem ipsum maiores doloremque, inventore beatae provident nobis.</p>
+                <a href="#index.html">Read more</a>
+            </div>
+            
         </div>
     </div>
 
@@ -88,7 +91,7 @@
                     <i class="fas fa-circle fa-stack-2x"></i>
                     <i class="fas fa-location-arrow  fa-stack-1x"></i>
                 </span>
-                <h4>Locations</h4>
+                <h4><a href="">Locations</a></h4>
             </div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error tempore repudiandae architecto sint labore
                 totam
@@ -101,7 +104,7 @@
                     <i class="fas fa-users fa-stack-1x"></i>
                 </span>
 
-                <h4>Community</h4>
+                <h4><a href="">Community</a></h4>
             </div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error tempore repudiandae architecto sint labore
                 totam
@@ -113,7 +116,7 @@
                     <i class="fas fa-circle fa-stack-2x"></i>
                     <i class="fas fa-file fa-stack-1x"></i>
                 </span>
-                <h4>Blog</h4>
+                <h4><a href="">Blog</a></h4>
             </div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error tempore repudiandae architecto sint labore
                 totam
@@ -125,7 +128,7 @@
                     <i class="fas fa-circle fa-stack-2x"></i>
                     <i class="fas fa-phone fa-stack-1x"></i>
                 </span>
-                <h4>Get in touch</h4>
+                <h4><a href="">Get in touch</a></h4>
             </div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error tempore repudiandae architecto sint labore
                 totam
@@ -140,16 +143,22 @@
             alt="A pair of black coloured, platform style shoes displayed on top of white fur.">
         <div class="texts">
             <h5>Popular this month</h5>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis commodi saepe cumque id error dicta voluptate ut rerum accusantium ea consequuntur, tempora dolorum, quasi at totam voluptates, soluta rem veniam ipsum. Amet iusto harum nisi, impedit consequuntur in fuga molestias sed atque nihil eos tenetur officiis dolorum maxime inventore, quisquam nesciunt illo alias doloribus. Perferendis amet deserunt id ab magni.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis commodi saepe cumque id error dicta
+                voluptate ut rerum accusantium ea consequuntur, tempora dolorum, quasi at totam voluptates, soluta rem
+                veniam ipsum. Amet iusto harum nisi, impedit consequuntur in fuga molestias sed atque nihil eos tenetur
+                officiis dolorum maxime inventore, quisquam nesciunt illo alias doloribus. Perferendis amet deserunt id
+                ab magni.</p>
             <a href="" class="find-more">Find out more</a>
         </div>
 
     </div>
 
     <section>
-        <img src="shoe-kloset/gallery-image-1.jpg" alt="A pair of legs with jeans and yellow shoess; a photo shot from a high place from the ground.">
+        <img src="shoe-kloset/gallery-image-1.jpg"
+            alt="A pair of legs with jeans and yellow shoess; a photo shot from a high place from the ground.">
         <img src="shoe-kloset/gallery-image-2.jpg" alt="A pair of legs posing while wearing brown boots.">
-        <img src="shoe-kloset/gallery-image-3.jpg" alt="Four types of converse shoes and 4 types of boots displayed outside of a shoe store.">
+        <img src="shoe-kloset/gallery-image-3.jpg"
+            alt="Four types of converse shoes and 4 types of boots displayed outside of a shoe store.">
     </section>
 
     <footer>
