--- a/index.html
+++ b/index.html
@@ -16,27 +16,17 @@
         <div class="home-background">
 
             <!-- desktop navigation bar -->
+            <div class="sticky-bar"></div>
             <nav class="dt-nav">
                 <ul>
-                    <li><a href="#0">HOME</a></li>
-                    <li><a href="#0">ABOUT</a></li>
-                    <li><a href="#0">BLOG</a></li>
-                    <li><a href="#0">CONTACT</a></li>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="index.html">ABOUT</a></li>
+                    <li><a href="blog.html">BLOG</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
                 </ul>
             </nav>
-            <!-- mobile navigation bar -->
-            <div class="sticky-bar">
-                <nav class="mb-nav">
-                    <ul>
-                        <li><a href="#0">HOME</a></li>
-                        <li><a href="#0">ABOUT</a></li>
-                        <li><a href="#0">BLOG</a></li>
-                        <li><a href="#0">CONTACT</a></li>
-                    </ul>
-                </nav>
-            </div>
 
-            <div href="#index.html" class="logo">Shoe<br>Kloset</div>
+            <div class="logo">Shoe Kloset</div>
             <h1>Find something new</h1>
             <div class="home-box-header">
                 <img src="shoe-kloset/home-box-header.png" alt="4 different types of shoes on display.">
@@ -57,7 +47,7 @@
                 labore.
                 Accusantium eum quasi dolorem ipsum, fugit, consequatur molestiae ducimus soluta. Repellat corrupti
                 beatae placeat.</p>
-            <a href="#index.html">Find out more</a>
+            <a href="https://www.youtube.com/watch?v=-fCo_bkUH5I&list=LL&index=1">Find out more</a>
         </div>
 
     </div>
@@ -68,8 +58,10 @@
             <img src="shoe-kloset/left-image.jpg" alt="White boots in the snow.">
             <div class="texts">
                 <h3>New Additions</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus nesciunt earum hic expedita dolor eveniet, cumque accusantium autem ipsum maiores doloremque, inventore beatae provident nobis.</p>
-                <a href="#index.html">Read more</a>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus nesciunt earum hic expedita
+                    dolor eveniet, cumque accusantium autem ipsum maiores doloremque, inventore beatae provident nobis.
+                </p>
+                <a href="https://www.youtube.com/watch?v=-fCo_bkUH5I&list=LL&index=1">Read more</a>
             </div>
 
         </div>
@@ -77,10 +69,12 @@
             <img src="shoe-kloset/right-image.jpg" alt="Many different types of high heels on the floor.">
             <div class="texts">
                 <h3>Too many options</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus nesciunt earum hic expedita dolor eveniet, cumque accusantium autem ipsum maiores doloremque, inventore beatae provident nobis.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus nesciunt earum hic expedita
+                    dolor eveniet, cumque accusantium autem ipsum maiores doloremque, inventore beatae provident nobis.
+                </p>
                 <a href="#index.html">Read more</a>
             </div>
-            
+
         </div>
     </div>
 
@@ -91,7 +85,7 @@
                     <i class="fas fa-circle fa-stack-2x"></i>
                     <i class="fas fa-location-arrow  fa-stack-1x"></i>
                 </span>
-                <h4><a href="">Locations</a></h4>
+                <h4><a href="https://www.youtube.com/watch?v=-fCo_bkUH5I&list=LL&index=1">Locations</a></h4>
             </div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error tempore repudiandae architecto sint labore
                 totam
@@ -104,7 +98,7 @@
                     <i class="fas fa-users fa-stack-1x"></i>
                 </span>
 
-                <h4><a href="">Community</a></h4>
+                <h4><a href="https://www.youtube.com/watch?v=-fCo_bkUH5I&list=LL&index=1">Community</a></h4>
             </div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error tempore repudiandae architecto sint labore
                 totam
@@ -116,7 +110,7 @@
                     <i class="fas fa-circle fa-stack-2x"></i>
                     <i class="fas fa-file fa-stack-1x"></i>
                 </span>
-                <h4><a href="">Blog</a></h4>
+                <h4><a href="https://www.youtube.com/watch?v=-fCo_bkUH5I&list=LL&index=1">Blog</a></h4>
             </div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error tempore repudiandae architecto sint labore
                 totam
@@ -128,7 +122,7 @@
                     <i class="fas fa-circle fa-stack-2x"></i>
                     <i class="fas fa-phone fa-stack-1x"></i>
                 </span>
-                <h4><a href="">Get in touch</a></h4>
+                <h4><a href="https://www.youtube.com/watch?v=-fCo_bkUH5I&list=LL&index=1">Get in touch</a></h4>
             </div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error tempore repudiandae architecto sint labore
                 totam
@@ -148,7 +142,7 @@
                 veniam ipsum. Amet iusto harum nisi, impedit consequuntur in fuga molestias sed atque nihil eos tenetur
                 officiis dolorum maxime inventore, quisquam nesciunt illo alias doloribus. Perferendis amet deserunt id
                 ab magni.</p>
-            <a href="" class="find-more">Find out more</a>
+            <a href="https://www.youtube.com/watch?v=-fCo_bkUH5I&list=LL&index=1" class="find-more">Find out more</a>
         </div>
 
     </div>
@@ -162,7 +156,7 @@
     </section>
 
     <footer>
-        <p>Copyright © 2020 Juno College</p>
+        <p><a href="https://junocollege.com/">Copyright © 2020 Juno College</a></p>
     </footer>
 
 </body>
